fixes alt attribute on  on 3-feature-obj.html, and adds extra padding to table.caption for mobile views

--- a/public/css/magazine-responsive.css
+++ b/public/css/magazine-responsive.css
@@ -146,6 +146,9 @@
 
 */
 @media (min-width: 481px) and (max-width: 767px){
+	table.caption{
+		margin: 50px;
+	}
 	.span3, .left-nav-1{
 		/*position:fixed;*/
 		padding-top: 0;
